refactor: follow existing pattern to make method names more discoverable